# LLM-SA-Fault-Injection

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  instruction2.md  main.py  plot_comparison.py  plot_qwen3_8b_metrics.py  pyproject.toml  requirements.txt
.omo/run-continuation/: ses_186ba1806ffeLWaEOw0lTru7xW.json  ses_1872a7b96ffeedXrCMyExsg4Zh.json
config/qwen3-0.6b-config/: layerstructure.txt
config/qwen3-1.7b-config/: layerstructure.txt
config/qwen3-14b-config/: layernames.txt  layerstructure.txt
config/qwen3-235-a22b-config/: layernames.txt  layerstructure.txt
config/qwen3-30b-a3b-config/: layernames.txt  layerstructure.txt
config/qwen3-32b-config/: layernames.txt  layerstructure.txt
config/qwen3-4b-config/: layernames.txt  layerstructure.txt
config/qwen3-8b-config/: layerstructure.txt
docs/: DIRECTORY_STRUCTURE.md
docs/notes/: bit-severity.md  sa-dataflow-propagation.md
projects/bert/: AGENTS.md  SAInjectProPlus32.py  allpe.sh  build_joint_severity.py  build_position_severity.py  build_severity_table.py  check_row_variation.py  compare_kv_detail.py  compare_kv_severity.py  instruction.md  plot_pe_validation.py  plot_position_severity.py  plot_row_variation.py  plot_severity_kv.py  pyproject.toml  run_pe_eval.py  run_pe_perbit_eval.py  run_perbit_eval.py  validate_severity.py
projects/gpt-oss/: SAInjectProRandomex2.py  printlayer.py  pyproject.toml
projects/gpt-oss/config/: layernames.txt  layerstructure.txt
projects/gpt2/: SAInjectProRandomex2.py  printlayer.py  pyproject.toml
projects/propagation_study/: AGENTS.md  plot_comparison.py  pyproject.toml  run_bit_pair.sh  run_propagation_study.py  run_single.sh
projects/qwen/: README.md  layernames.txt  layerstructure.txt  printlayer.py  pyproject.toml  run_ber_inject.py  run_single_bit_inject.py
projects/qwen3-0.6b/: 1_run_hw_injection.py  2_run_sw_injection.py  3_plot_results.py  AGENTS.md  NoInjectRuntime.py  SAInjectRuntime.py  build_severity_table.py  check_input_values.py  compare_k_matrix_variations.py  compare_layer_outputs_diff.py  compare_software_fault_diff.py  plot_severity.py  printlayer.py  pyproject.toml  run_single_bit_inject.py  test.py  test2.py  test_bit_severity.py  test_fault_effect_heatmap.py  test_ws_input_2x2.py
projects/qwen3-8b/: NoInjectRuntime.py  SAInjectRuntime.py  build_joint_severity.py  build_severity_table.py  calibrate_formula.py  plot_calibrated_severity.py  plot_heatmap.py  (+8 more)
result/: all_layer_k.jsonl  all_layer_v_fixed.jsonl  origin_1.jsonl  runtime_metrics_inject.jsonl  runtime_metrics_inject_fixed.jsonl  runtime_metrics_noinject.jsonl  single_bit_k.jsonl
scripts/: dispatch_ber_inject.sh
tests/: test_grouped_injector.py
tool/: AGENTS.md  pyproject.toml
(+101 files in other folders)
