[project]
name = "faultinject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.16",
    "aiosignal>=1.3.2",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "datasets>=3.5.0",
    "dill>=0.3.8",
    "evaluate>=0.4.3",
    "filelock>=3.18.0",
    "fonttools>=4.59.2",
    "frozenlist>=1.5.0",
    "fsspec>=2024.12.0",
    "hf-xet>=1.3.2",
    "idna>=3.10",
    "importlib-resources>=6.5.2",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "kiwisolver>=1.4.7",
    "markupsafe>=3.0.2",
    "matplotlib>=3.9.4",
    "mpmath>=1.3.0",
    "multidict>=6.7.1",
    "multiprocess>=0.70.16",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "nvidia-cublas-cu12>=12.4.5.8",
    "nvidia-cuda-cupti-cu12>=12.4.127",
    "nvidia-cuda-nvrtc-cu12>=12.4.127",
    "nvidia-cuda-runtime-cu12>=12.4.127",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "nvidia-cufft-cu12>=11.2.1.3",
    "nvidia-curand-cu12>=10.3.5.147",
    "nvidia-cusolver-cu12>=11.6.1.9",
    "nvidia-cusparse-cu12>=12.3.1.170",
    "nvidia-cusparselt-cu12>=0.6.2",
    "nvidia-nccl-cu12>=2.21.5",
    "nvidia-nvjitlink-cu12>=12.4.127",
    "nvidia-nvtx-cu12>=12.4.127",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pillow>=11.3.0",
    "pip>=25.1",
    "propcache>=0.3.1",
    "psutil>=7.0.0",
    "pyarrow>=19.0.1",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "setuptools>=78.1.1",
    "six>=1.17.0",
    "sympy>=1.13.1",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.22.2",
    "tool",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=5.2.0",
    "triton>=3.4.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.3.0",
    "wheel>=0.45.1",
    "xxhash>=3.5.0",
    "yarl>=1.19.0",
    "zipp>=3.23.0",
]
[tool.uv.workspace]
members = [
    "projects/*",
    "tool",
]

[tool.uv.sources]
tool = { workspace = true, editable = true }
