[project]
name = "gpt-oss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xuanfly", email = "2335483715@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
